Bug 155863 - The image stays cropped, but stretches to the size of original image, thus becomes distorted.
Summary: The image stays cropped, but stretches to the size of original image, thus be...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-16 06:53 UTC by NISZ LibreOffice Team
Modified: 2023-06-28 09:28 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file to insert (1.28 KB, image/jpeg)
2023-06-16 06:54 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-06-16 06:53:15 UTC
Description:
The image stays cropped, but stretches to the size of original image, thus becomes distorted.

Steps to Reproduce:
1. Open LO Impress.
2. Insert -> Image.
3. Crop the image 2 cm to the right and resize.
4. Right click on the image and select original size.


Actual Results:
The image remains cropped, but is stretched to the size of the original image, so it is distorted.

Expected Results:
The image remains cropped and not distorted.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 069c7dc4e9706b40ca12d83d83f90f41cec948f8
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-06-16 06:54:08 UTC
Created attachment 187929 [details]
Sample file to insert
Comment 2 Commit Notification 2023-06-20 16:31:49 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a4e12cbfc69cfe668fa30756a3c5843e911e22b1

tdf#155863 sd: fix resizing of cropped images to original size

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-21 17:57:43 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/755d2a8e30c6f6fd0508697dcd8037e3ce560d3b

tdf#155863 sd: fix resizing of cropped images to original size

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-06-23 09:22:04 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2023-06-28 09:28:44 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/257dbf548a4f844422d793b240e44844b3eb7aea

tdf#155863 sd: fix resizing of cropped images to original size

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.