tdf#155863 sd: fix resizing of cropped images to original size

Resizing with the function "Original Size" (e.g. in the context menu) resulted distortion in case of cropped images, if the original image
and its cropping have different aspect ratios. Now zoom the cropped
image to the original resolution instead of stretching it to the
same size.

Change-Id: I5e59f8b48dc03844a739c3eb803e3195a12d9c6d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153170
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit a4e12cbfc69cfe668fa30756a3c5843e911e22b1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153342
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>